Fix #2225 Fixing Flickering and Adding Clickable link

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -78,6 +78,9 @@ button.md-button.md-default-theme.oppia-learner-continue-button:hover {
 .material-icons.md-40 {
   font-size: 40px;
 }
+.material-icons.md-32 {
+  font-size: 32px;
+}
 .material-icons.md-dark {
   color: rgba(0, 0, 0, 0.54);
 }
